[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/palladium/core/singletons/conversation_manager.gd" type="Script" id=1]

[node name="conversation_manager" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="AutocloseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PendingConversationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="AutocloseTimer" to="." method="_on_AutocloseTimer_timeout"]
